...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_nav_pane_frag">

            <Button
                android:id="@+id/my_prof_btn_frag"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/toolbuttonred"
                android:text="@string/my_profile" />

            <Button
                android:id="@+id/weight_man_btn_frag"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/toolbuttonorange"
                android:text="@string/weight_management" />
...
