...
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/pounds_to_change_per_wk"
                android:textColor="#000000" />

            <SeekBar
                android:id="@+id/calculatorPoundsPerWeekFrag"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:max="20"
                android:min="-20"
                android:progress="0"
                android:progressTint="#000000" />
...
                android:text="@string/daily_cal_goal_colon"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/dailyCalEditTextFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="textPersonName"
                android:textSize="24sp" />
...
